fix for bug #128446 clicking on 'name' column in folder pane reverses account sort order. thanks to myk@mozilla.org for the patch r=varga, sr=scc,sspitzer a=asa